Added pkgdown site

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Imports:
     here,
     rstudioapi,
     stringr
-URL: https://github.com/smach/newpost
+URL: https://github.com/smach/newpost,
+    https://smach.github.io/newpost/
 BugReports: https://github.com/smach/newpost/issues
 Suggests: 
     knitr,
