--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,9 @@
-pandoc: 2.19.2
-pkgdown: 2.0.7
+pandoc: 3.1.11
+pkgdown: 2.1.0
 pkgdown_sha: ~
 articles:
   intro: intro.html
-last_built: 2023-02-26T22:30Z
-
+last_built: 2024-08-10T14:23Z
+urls:
+  reference: https://smach.github.io/newpost/reference
+  article: https://smach.github.io/newpost/articles
